Make iCal retrieval more robust
Closes gh-19