@@ -16,12 +16,10 @@
 
 package io.spring.calendar.ical;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -32,8 +30,13 @@ import biweekly.component.VEvent;
 import io.spring.calendar.release.ProjectReleases;
 import io.spring.calendar.release.Release;
 import io.spring.calendar.release.Release.Status;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestOperations;
 
 /**
  * A {@link Supplier} of {@link ProjectReleases} for {@link ICalProject ICalProjects}.
@@ -43,7 +46,15 @@ import org.springframework.stereotype.Component;
 @Component
 class ICalProjectReleasesSupplier implements Supplier<List<ProjectReleases>> {
 
+	private final Logger log = LoggerFactory.getLogger(ICalProjectReleasesSupplier.class);
+
 	private final List<ICalProject> projects = createProjects();
+
+	private final RestOperations rest;
+
+	ICalProjectReleasesSupplier(RestTemplateBuilder restTemplateBuilder) {
+		this.rest = restTemplateBuilder.build();
+	}
 
 	@Override
 	public List<ProjectReleases> get() {
@@ -59,23 +70,12 @@ class ICalProjectReleasesSupplier implements Supplier<List<ProjectReleases>> {
 	}
 
 	private List<ICalendar> parseICalendars(ICalProject project) {
-		InputStream inputStream = null;
 		try {
-			inputStream = project.getCalendarUrl().openStream();
-			return Biweekly.parse(inputStream).all();
+			return Biweekly.parse(this.rest.getForObject(project.getCalendarUri(), String.class)).all();
 		}
-		catch (IOException ex) {
-			throw new IllegalStateException(ex);
-		}
-		finally {
-			if (inputStream != null) {
-				try {
-					inputStream.close();
-				}
-				catch (IOException ex) {
-					// Continue
-				}
-			}
+		catch (RestClientException ex) {
+			this.log.warn("Failed to retrieve calendar from '{}'", project.getCalendarUri(), ex);
+			return Collections.emptyList();
 		}
 	}
 
@@ -89,13 +89,8 @@ class ICalProjectReleasesSupplier implements Supplier<List<ProjectReleases>> {
 	}
 
 	private static List<ICalProject> createProjects() {
-		try {
-			return Arrays.asList(new ICalProject("Spring Data", new URL(
-					"https://outlook.office365.com/owa/calendar/9d3cecb6098e4d7d884561cf288d70b7@vmware.com/4f8a123268f047d0b0b9319040506e2a3791298319254920500/calendar.ics")));
-		}
-		catch (MalformedURLException ex) {
-			throw new IllegalStateException();
-		}
+		return Arrays.asList(new ICalProject("Spring Data", URI.create(
+				"https://outlook.office365.com/owa/calendar/9d3cecb6098e4d7d884561cf288d70b7@vmware.com/4f8a123268f047d0b0b9319040506e2a3791298319254920500/calendar.ics")));
 	}
 
 }
